[gd_scene load_steps=17 format=3 uid="uid://cvgvjty042oa1"]

[ext_resource type="Script" uid="uid://cinw3r4bu4i7e" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://jmbedk78754h" path="res://scripts/player_mover.gd" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://d03s1tbta6pxr" path="res://sprites/princess/quest_banner.png" id="3_qhqgy"]
[ext_resource type="FontFile" uid="uid://3deahq4a1mkx" path="res://fonts/BBSesque.ttf" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://cd35w770t2g2q" path="res://sprites/player/sword_attack.png" id="4_tuyoq"]
[ext_resource type="Texture2D" uid="uid://ctnpyy6a4yogs" path="res://sprites/player/sword_1.png" id="5_qlg0r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_sh265"]

[sub_resource type="Animation" id="Animation_fjrip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Weapon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(55, 312.99997)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Weapon:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_qlg0r")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.74808234, 0.74808234)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Weapon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../SwordHit:monitoring")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_smehm"]
resource_name = "sword_attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Weapon:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_tuyoq"), ExtResource("5_qlg0r")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/Weapon:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.5, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(134.99998, 207), Vector2(134.99998, 207), Vector2(-220.99998, 494.00006), Vector2(55, 542), Vector2(55, 312.99997)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/Weapon:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.3, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.74808234, 0.74808234), Vector2(0.74808234, 0.74808234)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/Weapon:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.5, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.60900587, 0.0, 0.0]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_cooldown"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../SwordHit:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.033333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tuyoq"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Weapon:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(55, 312.99997), Vector2(55, 336.99997)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fjrip"]
_data = {
&"RESET": SubResource("Animation_fjrip"),
&"sword_attack": SubResource("Animation_smehm"),
&"walk": SubResource("Animation_tuyoq")
}

[sub_resource type="Animation" id="Animation_qlg0r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(61, -317)]
}

[sub_resource type="Animation" id="Animation_dqkch"]
resource_name = "start_day"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9666667, 1, 2, 2.0333333, 6.966666, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(61, -325), Vector2(61, -325), Vector2(61, -325), Vector2(61, -87), Vector2(61, -87), Vector2(61, -87), Vector2(61, -87), Vector2(61, -325)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlg0r"]
_data = {
&"RESET": SubResource("Animation_qlg0r"),
&"start_day": SubResource("Animation_dqkch")
}

[sub_resource type="LabelSettings" id="LabelSettings_dqkch"]
font = ExtResource("4_dqkch")
font_size = 50
font_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qlg0r"]
size = Vector3(1, 1.4701538, 1.0002899)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3vyb7")

[node name="PlayerCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_sh265")

[node name="PlayerMover" type="Node3D" parent="." groups=["player"]]
script = ExtResource("2_g2els")
move_accel = 2.0

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../UI")
libraries = {
&"": SubResource("AnimationLibrary_fjrip")
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="Banner" type="AnimationPlayer" parent="UI"]
root_node = NodePath("../Control")
libraries = {
&"": SubResource("AnimationLibrary_qlg0r")
}
autoplay = "start_day"

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="UI/Control"]
layout_mode = 0
offset_left = 61.0
offset_top = -317.0
offset_right = 1085.0
offset_bottom = 22.0
texture = ExtResource("3_qhqgy")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="UI/Control/TextureRect"]
layout_mode = 0
offset_left = 82.0
offset_top = 135.0
offset_right = 943.0
offset_bottom = 276.0
text = "Save the princess as a bold knight in a shiny armor!"
label_settings = SubResource("LabelSettings_dqkch")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 2
metadata/_edit_use_anchors_ = true

[node name="Weapon" type="TextureRect" parent="UI/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 28.727001
anchor_bottom = 16.365002
offset_left = 55.0
offset_top = 312.99997
offset_right = -70.08252
offset_bottom = 135.39929
scale = Vector2(0.74808234, 0.74808234)
pivot_offset = Vector2(511.5, 337.875)
texture = ExtResource("5_qlg0r")
expand_mode = 1
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Hit" type="Polygon2D" parent="UI/Control"]
color = Color(1, 0, 0, 0)
polygon = PackedVector2Array(-12, -7, 1159, -7, 1167, 654, -11, 657)
uv = PackedVector2Array(-428.5, -115.5, -34.5, -115.5, -43.5, 90.5, -454.5, 74.5)

[node name="SwordHit" type="Area3D" parent="."]
monitoring = false

[node name="HitBox" type="CollisionShape3D" parent="SwordHit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1368103, -1.0215073)
shape = SubResource("BoxShape3D_qlg0r")

[connection signal="body_entered" from="SwordHit" to="." method="_on_sword_hit_body_entered"]
